Fixes #684 - Fix for overlapped footer inside modal

--- a/app/assets/stylesheets/_components.scss
+++ b/app/assets/stylesheets/_components.scss
@@ -18,7 +18,7 @@
     background: $white;
     min-width: 500px;
     min-height: 400px;
-    padding: 0px 50px 20px 50px;
+    padding: 0px 50px 100px 50px;
     box-shadow: 0px 1px 15px 0px rgba(0, 0, 0, 0.6);
     margin-top: -5%;
     position: relative;
@@ -254,10 +254,10 @@
 .option-list {
   ul.box-list {
     li {
-      box-shadow: 0px 1px 3px rgba(0,0,0,0.4);
+      box-shadow: 0px 1px 3px rgba(0,0,0,0.3);
       line-height: 40px;
       padding: 0 30px 0 10px;
-      width: 350px;
+      max-width: 350px;
       min-height: 40px;
       margin-bottom: 8px;
       white-space: nowrap;
